# QtProjects

Example/: CMakeLists.txt  mainwindow.ui
Example_QT/: CMakeLists.txt  jordan22.code-workspace
Example_connect/: CMakeLists.txt  counter.cpp  counter.h  displayer.cpp  displayer.h  main.cpp
LCD_Example/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
MQTTpublisher/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
MqttProject/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  publisher.cpp  publisher.h
MqttPublisher_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Network_communcation/: CMakeLists.txt  client_site.cpp  client_site.h  deviceconnected.cpp  deviceconnected.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  server_site.cpp  server_site.h
Qt - Stm(Light PWM = GREEN,RED)/: mainSTM.c
Qt - Stm(Light PWM = GREEN,RED)/Serial_port_UART/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Serial_port_UART/: mainwindow.cpp  mainwindow.h
Serial_port_UART_dynamic/: mainwindow.cpp  mainwindow.h  mainwindow.ui
qtSerial_Port_UART/Serial_port_UART/: mainwindow.cpp  mainwindow.h
